--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Srijan Paul <srijan.paul@deepsource.io>",
   "license": "MIT",
   "devDependencies": {
+    "@types/cli-color": "^2.0.2",
     "@types/glob": "^7.2.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -17,6 +18,7 @@
   "dependencies": {
     "@types/esquery": "^1.0.2",
     "@types/estree": "^0.0.50",
+    "cli-color": "^2.0.1",
     "espree": "^9.3.0",
     "esquery": "^1.4.0",
     "glob": "^7.2.0",
