--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "arrowParens": "avoid",
   "endOfLine": "lf",
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "semi": true
 }
