--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cli-color": "^2.0.2",
+    "@types/eslint-scope": "^3.7.3",
+    "@types/eslint-visitor-keys": "^1.0.0",
     "@types/glob": "^7.2.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -18,11 +20,13 @@
   "dependencies": {
     "@types/esquery": "^1.0.2",
     "@types/estree": "^0.0.50",
+    "@typescript-eslint/typescript-estree": "^5.10.1",
     "cli-color": "^2.0.1",
     "espree": "^9.3.0",
     "esquery": "^1.4.0",
     "glob": "^7.2.0",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript-eslint-parser": "^22.0.0",
+    "vue-eslint-parser": "^8.2.0"
   },
   "scripts": {
     "build": "tsc --build"
