--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/esquery": "^1.0.2",
     "@types/estree": "^0.0.50",
     "cli-color": "^2.0.1",
+    "escope": "^3.6.0",
     "espree": "^9.3.0",
     "esquery": "^1.4.0",
     "glob": "^7.2.0",
